1.2.1
* Updated vas-samba-config to work with Samba 3.4.0 kerberos settings (bug #750)
* vas-set-samba-password script no longer fails when METHOD=tdb in vas-set-samba-password.conf (bug #733)
* Added vasidmap-status script to vasidmap package
* Port to Mac OSX (bug #777)

1.2.0
* Fix invalid lookups for "uidNumber" (bug #714).
* Avoid lookups of non-QAS users (bug #714).
* Avoid lookups of non-numeric uids & gids.
* Fix harmless "cmp: EOF on <file>" error message (bug #646).
* Add usage help to vas-samba-config (-h option).
* Add -V flag for vasidmapd to print its version number (bug #616).
* Correct vas-set-samba-password path in example (bug #615).

1.1.0
* bug 598: domain sid detection
* vas-krb5-config warns about symlinks
* bug 596: vas-samba-config copes with missing winbind 
* bug 596: vas-samba-config runs quest-samba init scripts correctly
* bug 171: corrected vas-set-samba-password file ownership
* documentation corrections

1.0.0
* better support for non-Quest Samba servers
* added vas-krb5-config script
* moved vas-samba-config into /opt/quest/sbin (not bin)
* moved vas-set-samba-password into /opt/quest/libexec (not sbin)
* bug 479: 'package' target should choose its own DESTDIR
* bug 474: correct 'samba-quest' group script name
* bug 536: improvements in vas-samba-config

0.10.0
* Improve messages for support
* Detect VAS connection problems
* Handle cases where SUDO resets the environment
* Add -V flag to get version
* Add flags to support non-quest-samba
* Improve the way that the service daemons start

0.9.11
* bug 240: support new idmap parameter names for Samba 3.0.25
* bug 254: vas-samba-config properly starts/stops services on HP-UX

0.9.10
* bug 217: disable scripted password changes with some VAS 3.1 versions

0.9.9
* bug 191: fix the way the host password is updated
* Fix vas-samba-config script on Solaris
* Add manual page for vasidmap(1)
* Change package name to quest-vasidmap (and QSFTidmap for Solaris)

0.9.8